Add support for 4.2  Snapshot
Change-Id: Ica7391b1ee0c859a1e9813dd84268a5cb6c4cf8e